Fixed hero text display on mobile, and social media buttons according to the media plan.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,14 @@ hr {
     align-items: center;
 }
 
+.rubbish-text{
+    font-size: 30pt;
+}
+
+@media screen {
+    #rubbish
+}
+
 
 /*--------------------------------------------------------------
 # Back to top button
